[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typst-fillable"
version = "0.0.1"
description = "Add interactive form fields to Typst-generated PDFs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alberto Paparelli", email = "carpedev@gmail.com" }
]
keywords = ["typst", "pdf", "forms", "fillable", "acroform", "reportlab"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "typst>=0.12.0",
    "reportlab>=4.0.0",
    "pypdf>=4.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
typst-fillable = "typst_fillable.cli:main"

[project.urls]
Homepage = "https://github.com/carpe-diem/typst-fillable"
Documentation = "https://github.com/carpe-diem/typst-fillable#readme"
Repository = "https://github.com/carpe-diem/typst-fillable"
Issues = "https://github.com/carpe-diem/typst-fillable/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/typst_fillable"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["typst_fillable"]

[tool.mypy]
python_version = "3.10"
strict = true
